Link style font weight tweak

--- a/src/scss/jump-to-nav.scss
+++ b/src/scss/jump-to-nav.scss
@@ -119,6 +119,7 @@
             color: var(--jtn-link-color);
 
             font-size: .75em;
+            font-weight: normal;
 
             text-decoration: none;
         }
