--- a/src/scss/jump-to-nav.scss
+++ b/src/scss/jump-to-nav.scss
@@ -310,6 +310,7 @@
             box-shadow: var(--jtn-box-shadow-deep);
             overflow: auto;
             max-height: 160px;
+            z-index: 10;
         }
 
         li {
