--- a/src/_jump-to-nav.twig
+++ b/src/_jump-to-nav.twig
@@ -1,9 +1,9 @@
-<div class="jump-to-nav">
+<div class="jump-to-nav__dialog">
     <button class="jump-to-nav__maximize" type="button" aria-label="Maximize">
         <svg aria-hidden="true" width="8.5px" height="14.1px" viewBox="0 0 8.5 14.1" xml:space="preserve" style="pointer-events: none;">
             <style>
                 .maximize-polygon {
-                    fill: var(--jtn-text-color);
+                    fill: var(--jtn-color-text);
                 }
             </style>
             <polygon class="maximize-polygon" points="0,7.1 7.1,14.1 8.5,12.7 2.8,7.1 8.5,1.4 7.1,0 0,7.1 0,7.1 "></polygon>
@@ -19,7 +19,7 @@
                     <style type="text/css">
                         .minimize-line {
                             fill: none;
-                            stroke: var(--jtn-text-color);
+                            stroke: var(--jtn-color-text);
                             stroke-linecap: round;
                             stroke-linejoin: round;
                             stroke-miterlimit: 10;
