--- a/src/scss/jump-to-nav.scss
+++ b/src/scss/jump-to-nav.scss
@@ -127,19 +127,6 @@
             }
         }
 
-        .jump-to-nav__link {
-            display: inline-block;
-
-            margin-bottom: 8px;
-
-            text-decoration: none;
-
-            color: var(--jtn-color-primary);
-
-            font-size: var(--jtn-small-font-size);
-            font-weight: normal;
-        }
-
         .jump-to-nav__list,
         .jump-to-nav__nested-list {
             margin-bottom: 0;
@@ -157,11 +144,110 @@
 
         .jump-to-nav__item {
             padding-left: 10px;
-
+            position: relative;
+            
             &:has(.jump-to-nav__item--active) {
                 > .jump-to-nav__link {
                     font-weight: 500;
                 }
+            }
+        }
+        
+        .jump-to-nav__link {
+            display: block;
+            
+            text-decoration: none;
+            
+            color: var(--jtn-color-primary);
+            
+            font-size: var(--jtn-small-font-size);
+            font-weight: normal;
+            padding-right: 30px;
+            margin-bottom: 10px;
+
+            &:hover {
+                span {
+                    text-decoration: underline;
+                }
+
+                + .jump-to-nav__item-controls .jump-to-nav__copy-button {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .jump-to-nav__item-controls {
+            position: absolute;
+            right: -5px;
+            top: -4px;
+        }
+
+        .jump-to-nav__copy-button {
+            width: 23px;
+            height: 23px;
+            border: 0;
+            border-radius: 23px;
+            background-color: transparent;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            opacity: 0;
+            transition: all 100ms linear;
+            
+            svg {
+                width: 14px;
+                height: 14px;
+                pointer-events: none;
+            }
+            
+            path {
+                fill: var(--jtn-color-text);
+            }
+            
+            &:hover {
+                background-color: var(--jtn-gray-100);
+                opacity: 1;
+
+                + .jump-to-nav__copy-bubble {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .jump-to-nav__copy-bubble {
+            position: absolute;
+            background-color: var(--jtn-color-text);
+            color: #fff;
+            height: 21px;
+            font-size: 9px;
+            border-radius: 23px;
+            top: 1px;
+            right: calc(100% + 5px);
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-transform: uppercase;
+            transition: opacity 100ms linear;
+            opacity: 0;
+            pointer-events: none;
+            line-height: 1;
+            white-space: nowrap;
+            padding-left: 10px;
+            padding-right: 10px;
+
+            &:after {
+                position: absolute;
+                left: calc(100% - 1px);
+                top: calc(50% - 3.5px);
+                content: '';
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 4px 0 4px 6.9px;
+                border-color: transparent transparent transparent var(--jtn-color-text);
             }
         }
 
@@ -180,28 +266,6 @@
             padding: var(--jtn-padding-y-common) var(--jtn-padding-x-common);
 
             border-right: 1px solid var(--jtn-color-bg);
-
-            &::-webkit-scrollbar-corner {
-                background-color: transparent;
-            }
-
-            &::-webkit-scrollbar {
-                width: 5px;
-                height: 5px;
-            }
-
-            &::-webkit-scrollbar-track {
-                background-color: transparent;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                outline: 0;
-                background-color: var(--jtn-gray-100);
-
-                &:hover {
-                    background-color: var(--jtn-gray-200);
-                }
-            }
         }
 
         [role="heading"] {
@@ -404,6 +468,30 @@
 
             .jump-to-nav__body {
                 overflow: auto;
+            }
+        }
+    }
+
+    .jump-to-nav--styled-scrollbar {
+        &::-webkit-scrollbar-corner {
+            background-color: transparent;
+        }
+
+        &::-webkit-scrollbar {
+            width: 5px;
+            height: 5px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            outline: 0;
+            background-color: var(--jtn-gray-100);
+
+            &:hover {
+                background-color: var(--jtn-gray-200);
             }
         }
     }
