nested styled adjustments

--- a/src/scss/jump-to-nav.scss
+++ b/src/scss/jump-to-nav.scss
@@ -420,6 +420,7 @@
             font-family: var(--jtn-ff-primary);
             font-size: var(--jtn-small-font-size);
             line-height: 1;
+            font-weight: normal;
     
             &:focus {
                 outline-color: var(--jtn-color-primary);
@@ -555,6 +556,8 @@
     }
 
     &.jump-to-nav--collapse-nested {
+        --jtn-link-spacing: 13px;
+        
         .jump-to-nav__nested-list {
             height: 0;
             overflow: hidden;
