Bunch of enhancements. Version 1.5.0

--- a/src/_jump-to-nav.twig
+++ b/src/_jump-to-nav.twig
@@ -31,7 +31,9 @@
             </div>
             
             <div class="jump-to-nav__search jump-to-nav__search--loading">
-                <input class="jump-to-nav__search-input" id="jumpToNavAutoComplete" type="text" placeholder="Search" autocomplete="off">
+                <div class="jump-to-nav__input-wrapper">
+                    <input class="jump-to-nav__search-input" id="jumpToNavAutoComplete" type="text" placeholder="Search" autocomplete="off">
+                </div>
                 
                 <div class="jump-to-nav__search-clear" role="button" tabindex="0">
                     <svg class="jump-to-nav__clear-icon" viewBox="0 0 320 512" aria-hidden="true" style="pointer-events: none;" aria-hidden="true">
