Main nav prototyping

--- a/src/_jump-to-nav.twig
+++ b/src/_jump-to-nav.twig
@@ -55,7 +55,9 @@
         </div>
         
         <div class="jump-to-nav__body jump-to-nav--styled-scrollbar">
-            <nav class="jump-to-nav__nav">
+            <nav class="jump-to-nav__site-menu">
+            </nav>
+            <nav class="jump-to-nav__in-page">
                 <div class="jump-to-nav__item-controls">
                     <div class="jump-to-nav__copy-button" role="button" aria-label="Copy link" tabindex="0">
                         <svg class="jump-to-nav__link-icon" viewBox="0 0 640 512" style="pointer-events: none;" aria-hidden="true">
